--- a/index.html
+++ b/index.html
@@ -473,102 +473,104 @@
                 </p>
                 <div id="download-options-wrapper">
                     <img class="download-options" src="./assets/images/app-store.png" alt="play-store" loading="lazy" />
+                    <a class="play-store-link" href="https://spaces.shortsqueeze.space/Application/app-release.apk"><img
+                            class=" download-options" src="./assets/images/play-store.png" alt="play-store"
+                            loading="lazy" /></a>
                     <div class="dow-arrow"">
-            <a href=" https://spaces.shortsqueeze.space/Application/app-release.apk"><img class=" download-options"
-                            src="./assets/images/play-store.png" alt="play-store" loading="lazy" /></a>
-                        <p>>>>>>>>>>>>>></p>
-                    </div>
+                    <p>>>>>>>>>>>>>></p>
                 </div>
+            </div>
             </div>
         </section>
     </main>
     <footer>
-        <!-- <img src="./assets/images/footer.png" id="footer-img" /> -->
-        <img src="./assets/images/Group 9223.png" id="footer-img-m" />
-        <div id="footer-content">
-            <div class="footer-content-top">
-                <div id="footer-content-left">
-                    <div id="footer-content-logo-wrapper">
-                        <div id="pm-logo">
-                            <img src="./assets/images/blogo.svg" />
+        <!-- <img src=" ./assets/images/footer.png" id="footer-img" /> -->
+                    <img src="./assets/images/Group 9223.png" id="footer-img-m" />
+                    <div id="footer-content">
+                        <div class="footer-content-top">
+                            <div id="footer-content-left">
+                                <div id="footer-content-logo-wrapper">
+                                    <div id="pm-logo">
+                                        <img src="./assets/images/blogo.svg" />
+                                    </div>
+                                    <div id="pm-text">
+                                        <small>Podium Pe</small>
+                                        <span>A Product of Shortsqueeze Pvt Ltd.</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="footer-content-right">
+                                <div id="pm-nav">
+                                    <div class="pm-nav-items">
+                                        <a href="TermsAndService.html" class="footer-links">Terms & Conditions</a>
+                                    </div>
+                                    <div class="pm-nav-items">
+                                        <a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a>
+                                    </div>
+                                    <div class="pm-nav-items">
+                                        <a href="help-support.html" class="footer-links">Help & Support</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div id="pm-text">
-                            <small>Podium Pe</small>
-                            <span>A Product of Shortsqueeze Pvt Ltd.</span>
+                        <div class="footer-content-bottom">
+                            <div id="copyright">Copyright @2024</div>
+                            <div id="pm-card">
+                                <p id="pm-card-text">
+                                    Explore our community of car enthusiasts for more engaging discussions.
+                                </p>
+                                <div id="pm-subcard">
+                                    <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
+                                    <img class="arrow-footer" src="./assets/images/arrowblack.png" alt="arrow">
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div id="footer-content-right">
-                    <div id="pm-nav">
-                        <div class="pm-nav-items">
-                            <a href="TermsAndService.html" class="footer-links">Terms & Conditions</a>
+                    <div id="footer-content-m">
+                        <div class="foot-link-div">
+                            <a href="TermsAndService.html" class="footer-link">Terms & Conditions
+                                <div class="line line-fm-1"></div>
+                            </a>
+                            <a href="PrivacyPolicy.html" class="footer-link center-align">Privacy Policy
+                                <div class="line line-fm-2"></div>
+                            </a>
+                            <a href="help-support.html" class="footer-link right-align">Help & Support
+                                <div class="line line-fm-3"></div>
+                            </a>
                         </div>
-                        <div class="pm-nav-items">
-                            <a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a>
-                        </div>
-                        <div class="pm-nav-items">
-                            <a href="help-support.html" class="footer-links">Help & Support</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-content-bottom">
-                <div id="copyright">Copyright @2024</div>
-                <div id="pm-card">
-                    <p id="pm-card-text">
-                        Explore our community of car enthusiasts for more engaging discussions.
-                    </p>
-                    <div id="pm-subcard">
-                        <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
-                        <img class="arrow-footer" src="./assets/images/arrowblack.png" alt="arrow">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="footer-content-m">
-            <div class="foot-link-div">
-                <a href="TermsAndService.html" class="footer-link">Terms & Conditions
-                    <div class="line line-fm-1"></div>
-                </a>
-                <a href="PrivacyPolicy.html" class="footer-link center-align">Privacy Policy
-                    <div class="line line-fm-2"></div>
-                </a>
-                <a href="help-support.html" class="footer-link right-align">Help & Support
-                    <div class="line line-fm-3"></div>
-                </a>
-            </div>
-            <!-- <div class="li-underln">
+                        <!-- <div class="li-underln">
         <div class="line l-div"></div>
         <div class="line"></div>
         <div class="line r-div"></div>
       </div> -->
-            <div id="footer-subcard">
-                <div id="footer-subcard-logo">
-                    <img src="./assets/images/blogo.svg" />
-                </div>
-                <div id="footer-subcard-content">
-                    <div class="left-side">
-                        <h4 class="podiumpe-head-mobile-footer">Podium Pe</h4>
-                        <p class="podiumpe-text-mobile-footer">A Product of <br>Shortsqueeze Pvt Ltd.</p>
-                    </div>
-                    <div>
-                        <p class="copyright-text-mobile">Copyright <br>@2024</p>
-                    </div>
-                </div>
-            </div>
-            <div id="footer-card">
-                <p class="footer-text-racingline">
-                    Explore our community of car enthusiasts for more engaging discussions.
-                </p>
-                <div class="footer-logo-div-racingline">
-                    <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
-                    <img class="arrow-footer" src="./assets/images/arrowblack.png" id="subcard-footer-arrow" />
-                </div>
+                        <div id="footer-subcard">
+                            <div id="footer-subcard-logo">
+                                <img src="./assets/images/blogo.svg" />
+                            </div>
+                            <div id="footer-subcard-content">
+                                <div class="left-side">
+                                    <h4 class="podiumpe-head-mobile-footer">Podium Pe</h4>
+                                    <p class="podiumpe-text-mobile-footer">A Product of <br>Shortsqueeze Pvt Ltd.</p>
+                                </div>
+                                <div>
+                                    <p class="copyright-text-mobile">Copyright <br>@2024</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="footer-card">
+                            <p class="footer-text-racingline">
+                                Explore our community of car enthusiasts for more engaging discussions.
+                            </p>
+                            <div class="footer-logo-div-racingline">
+                                <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
+                                <img class="arrow-footer" src="./assets/images/arrowblack.png"
+                                    id="subcard-footer-arrow" />
+                            </div>
 
-            </div>
+                        </div>
 
-        </div>
-    </footer>
+                    </div>
+                    </footer>
 </body>
 <script>
     const menu = document.querySelector("#hamburger-menu-wrapper");
