--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                         <h2><span>ENTER THE RALLY OF</span> <br>FANTASY MOTORSPORTS</h2>
                     </div>
                     <div id="download-options-wrapper">
-                        <img class="download-options" src="./assets/images/XMLID_206_.png" alt="play-store"
-                            loading="lazy" />
+                        <a href="https://apps.apple.com/us/app/podiumpe-fantasy-motorsports/id6478319821"><img class="download-options" src="./assets/images/XMLID_206_.png" alt="play-store"
+                            loading="lazy" /></a>
                         <div class="play-store">
                             <p class="wait-text">*Beta live now</p>
                             <a href="https://spaces.shortsqueeze.space/Application/app-release.apk"><img
@@ -111,8 +111,8 @@
                     <div id="download-options-wrapper-m">
                         <div class="app-store-m">
                             <p>*Beta live now</p>
-                            <img class="download-options-m" src="./assets/images/app-store.png" alt="app-store"
-                                loading="lazy" />
+                            <a href="https://apps.apple.com/us/app/podiumpe-fantasy-motorsports/id6478319821"><img class="download-options-m" src="./assets/images/app-store.png" alt="app-store"
+                                loading="lazy" /></a>
                         </div>
                         <a href="https://spaces.shortsqueeze.space/Application/app-release.apk"><img
                                 class="download-options-m" src="./assets/images/play-store.png" alt="play-store"
@@ -472,11 +472,11 @@
                     enjoy the rich experience of fantasy gaming.
                 </p>
                 <div id="download-options-wrapper">
-                    <img class="download-options" src="./assets/images/app-store.png" alt="play-store" loading="lazy" />
+                    <a class="play-store-link" href="https://apps.apple.com/us/app/podiumpe-fantasy-motorsports/id6478319821"><img class="download-options" src="./assets/images/app-store.png" alt="play-store" loading="lazy" /></a>
                     <a class="play-store-link" href="https://spaces.shortsqueeze.space/Application/app-release.apk"><img
                             class=" download-options" src="./assets/images/play-store.png" alt="play-store"
                             loading="lazy" /></a>
-                    <div class="dow-arrow"">
+                    <div class="dow-arrow">
                     <p>>>>>>>>>>>>>></p>
                 </div>
             </div>
