--- a/TermsAndService.html
+++ b/TermsAndService.html
@@ -1102,9 +1102,9 @@
           <h1>28 <span class="dash"></span> CANCELLATION POLICY</h1>
           <p>
             Participants can cancel their game entry at no cost until the game
-            officially starts; however, user will not be able to cancel his
-            entered game, once it has commenced. Refunds for cancellations
-            before the game start will be issued in full.
+            officially starts; however, the user will not be able to cancel his
+            entered game, once it has commenced. Refunds for cancellations made
+            before the game starts will be issued in full.
           </p>
         </div>
         <div class="clause-wrapper" id="last">
