--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <link rel="stylesheet" href="./assets/styles/styles.css" />
     <link rel="stylesheet" href="./assets/styles/mobile.css" />
+    <meta name="p:domain_verify" content="aa9963481cbfece3c62ca0a4757389f9"/>
 </head>
 
 <body>
